Initial source check-in

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file was created by JetBrains WebStorm 6.0.1 for binding GitHub repository
+# AngularJS Modules for Great Justice
+
+This is source code examples from a recent blog post out on codingsmackdown.tv by the same name.
